[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-api-wrapper"
version = "0.1.0"
description = "Simple wrapper around OpenAI Responses API for single and batch operations with conversation history support"
readme = "README.md"
authors = [{name = "Sanps"}]
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = ["gpt_api_wrapper"]
